update TimeVal Wrapper

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(liveRewrite)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(liveRewrite main.cpp)
+add_executable(liveRewrite main.cpp base/timeval.h base/timeval.cpp base/handlerset.h base/handlerset.cpp)
